# roboearth

./: README.md  rosdep.yaml  stack.xml
object_scanning/ar_bounding_box/: CMakeLists.txt  ar_bounding_box.vcg  mainpage.dox  manifest.xml
object_scanning/re_kinect_object_detector/: CMakeLists.txt  mainpage.dox  manifest.xml
object_scanning/re_object_detector_gui/: CMakeLists.txt  mainpage.dox  manifest.xml
object_scanning/re_object_detector_gui/launch/: re_vision_detector.launch
object_scanning/re_object_detector_gui/src/: comthread.cpp  comthread.h  downloadobjectdialog.cpp  downloadobjectdialog.h  downloadobjectdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
object_scanning/re_object_recorder/: CMakeLists.txt  mainpage.dox  manifest.xml
object_scanning/re_object_recorder/include/re_object_recorder/: qminizip.h
object_scanning/re_object_recorder/src/: comthread.cpp  comthread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  owldescriptioncreator.cpp  owldescriptioncreator.h  qminizip.cpp  re_visionmodelcreator.cpp  re_visionmodelcreator.h  upload_object_model.cpp  uploadhelpers.h
re_2dmap_extractor/: CMakeLists.txt  mainpage.dox  manifest.xml
re_2dmap_extractor/src/: Extract2dMap.cpp  MapExtractor.cpp  MapExtractor.h
re_2dmap_extractor/srv/: RequestLocMap.srv  RequestNavMap.srv
re_comm/: CMakeLists.txt  mainpage.dox  manifest.xml
re_comm/launch/: re_comm_knowrob.launch  re_cop_interface.launch
re_comm/lib/: lib_licenses
re_comm/prolog/: comp_roboearth.pl  init.pl  init.pl.in
re_msgs/: mainpage.dox  manifest.xml
re_msgs/msg/: DetectedObject.msg  Pixel.msg  SeenObject.msg  SeenObjectArray.msg  StringArray.msg
re_ontology/: CMakeLists.txt  README  mainpage.dox  manifest.xml
re_ontology/examples/: test_re_ontology.py
re_ontology/launch/: re_ontology.launch
re_ontology/owl/: amigo.owl  amigo.owl.in  cabinet_model.owl  environment_map.owl  environment_map.owl.in  fmi_hospital_room.owl  fmi_hospital_room_2D_occupancy_map.owl  ias_hospital_room.owl.in  (+20 more)
re_srvs/: mainpage.dox  manifest.xml
re_vision/: CMakeLists.txt  gazebo.launch  mainpage.dox  manifest.xml  test.launch
re_vision/dummy_models/bed1/: face_000.ply  face_000.txt  meta.xml
re_vision/dummy_models/bio/: drawing_model.ply  face_000.ply  face_000.txt  face_001.ply  face_001.txt  face_002.ply  face_002.txt  face_003.ply  face_003.txt  face_004.ply  face_004.txt  meta.xml
re_vision/dummy_models/bottle1_big/: face_000.ply  face_000.txt  face_002.txt  face_003.txt  face_004.ply  meta.xml
re_vision/dummy_models/bottle1_medium/: face_000.ply  face_001.ply  face_001.txt  face_002.ply  face_003.ply  face_004.txt
re_vision/dummy_models/bottle1_small/: face_000.ply  face_000.txt  face_001.ply  face_001.txt  face_002.ply  face_002.txt  face_003.txt  face_004.txt  meta.xml
re_vision/dummy_models/box/: drawing_model.ply  face_000.ply  face_000.txt  face_001.ply  face_001.txt  face_002.ply  face_002.txt  face_003.ply  face_003.txt  face_004.ply  face_004.txt  face_005.ply  face_005.txt  face_006.ply  face_006.txt  face_007.ply  face_007.txt  face_008.ply  face_008.txt  face_009.ply  face_009.txt  face_010.ply  face_010.txt  face_011.ply  face_011.txt  face_012.ply  face_012.txt  face_013.ply  face_013.txt  face_014.ply  face_014.txt  meta.xml
re_vision/dummy_models/cabinet1/: face_000.ply  face_000.txt  meta.xml
re_vision/dummy_models/cabinet_small/: face_000.ply  face_000.txt  meta.xml
re_vision/dummy_models/lion/: drawing_model.ply  face_000.ply  face_000.txt  face_001.ply  face_001.txt  face_002.ply  face_002.txt  face_003.ply  face_003.txt  face_004.ply  face_004.txt  face_005.ply  face_005.txt  face_006.ply  face_006.txt  face_007.ply  face_007.txt  face_008.ply  face_008.txt  face_009.ply  face_009.txt  face_010.ply  face_010.txt  face_011.ply  face_011.txt  face_012.ply  face_012.txt  face_013.ply  face_013.txt  face_014.ply  face_014.txt  face_015.ply  face_015.txt  face_016.ply  face_016.txt  face_017.ply  face_017.txt  face_018.ply  face_018.txt  face_019.ply  (+2 more)
re_vision/dummy_models/van/: drawing_model.ply  face_000.ply  face_000.txt  face_001.ply  face_001.txt  face_002.ply  face_002.txt  face_003.ply  face_003.txt  face_004.ply  face_004.txt  face_005.ply  face_005.txt  face_006.ply  face_006.txt  face_007.ply  face_007.txt  face_008.ply  face_008.txt  face_009.ply  face_009.txt  face_010.ply  face_010.txt  face_011.ply  face_011.txt  face_012.ply  face_012.txt  face_013.ply  face_013.txt  meta.xml
re_vision/include/re_vision/: IO.h  Matches.h  PatchFile.h  SurfSet.h
re_vision/src/: CameraBridge.cpp  CameraBridge.h  CameraBridgeFactory.cpp  CameraBridgeFactory.h  MetaFile.cpp  MetaFile.h  ObjectDetector.cpp  ObjectDetectorClass.cpp  ObjectDetectorClass.h  ObjectDetectorDummy.cpp  ObjectDetectorMethod.cpp  ObjectDetectorMethod.h  ObjectDetectorProvider.cpp  ObjectDetectorProvider.h  ObjectModel.cpp  ObjectModel.h  PlanarVisualizationModel.cpp  PlanarVisualizationModel.h  PointCloudVisualizationModel.cpp  PointCloudVisualizationModel.h  Surf3DDetector.cpp  Surf3DDetector.h  SurfPlanarDetector.cpp  SurfPlanarDetector.h  TestObjectDetector.cpp  VisualizationManager.cpp  VisualizationManager.h  VisualizationModel.h  debug.cpp  debug.h
re_vision/src/CubeModelCreator/: createCubeModel.cpp
re_vision/src/ModelTools/: changeScaleFactor.cpp  getModelInfo.cpp  loadModelIntoVSlam.cpp  removeModelFace.cpp  showModel.cpp  testModel.cpp
re_vision/src/PlanarModelCreator/: createPlanarModel.cpp
re_vision/src/PointCloudModelCreator/: Mask.cpp  Mask.h  changeReferenceSystem.cpp  computePixelPoints.cpp  computePixelPoints2.cpp  createPlyPoints.cpp  createPointCloudModel.cpp  createPointCloudModelBak.cpp  extractFast.cpp  extractOutlineFromImages.cpp  extractSurf.cpp  generateMeta.cpp  removeBackgroundPoints.cpp
re_vision/src/re_vision/srv/: _SearchFor.py  __init__.py
re_vision/srv/: SearchFor.srv
re_vision/srv_gen/cpp/include/re_vision/: SearchFor.h
re_vision/srv_gen/lisp/: SearchFor.lisp  _package.lisp  _package_SearchFor.lisp  re_vision-srv.asd
(+481 files in other folders)
